footer fix alignment

--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ footer{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    text-align: center;
 }
 
 footer a{
